app/assets/stylesheets/hyku.scss
#masthead {
  #logo {
    margin-left: 10px;

    img {
      max-height: 50px;
    }
  }

  .navbar-right {
    margin-right: 10px;
  }

  .glyphicon {
    display: none;
  }
}

@media (min-width: $screen-sm-min) {
  .logo-set {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-direction: column;
  }
  // sets the home page tabs to use flex rather than columns
  // allows full width if tabs are turned off with feature flipper
  .home-content {
    display: flex;
  }
  .home-tabs-left {
    min-width: 50%;
  }
  .home-tabs-right,
  .home-tabs-left {
    margin: 0 10px;
  }
}

#banner.jumbotron {
  background: image_url("white-cloud-background.jpg") no-repeat;
  background-position: center;
  height: 220px;
  background-color: $gray-lighter;
  border: 0;
  font-family: $primary-font-family;
  margin-bottom: 0;
  text-align: center;

  h1 {
    color: $jumbotron-heading-color;
    font-size: $jumbotron-heading-font-size;
    font-weight: 700;
    letter-spacing: 0.075em;
    text-transform: uppercase;
  }

  p {
    color: $jumbotron-sub-heading-color;
    font-size: 1.6em;
    margin-bottom: 20px;
  }

  .btn-sign-up {
    @include button-variant(
      $classic-white,
      $jumbotron-button-background-color,
      $jumbotron-button-background-color
    );
    border-radius: 3px;
    font-size: 0.7em;
    margin-top: 15px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

footer.navbar {
  border-radius: 0;
  font-size: 0.9em;
  min-height: 40px;
  vertical-align: middle;

  p {
    margin: 10px;
    text-align: center;

    strong {
      font-weight: 500;
    }
  }
}

.product-features {
  background: $features-section-background-color;
  border-top: 1px solid $features-section-border-color;
  font-family: $primary-font-family;
  padding: 20px 0 50px;

  .grid-row {
    display: flex;
    flex-wrap: wrap;
  }

  .grid-item {
    padding-left: 40px;
    padding-right: 40px;
    text-align: center;
    width: 33.33%;
  }

  .heading {
    color: $gray;
    font-size: 1.4em;
  }

  p {
    font-size: 1em;
    line-height: 1.5em;
  }
}

.graph-container {
  height: 300px; // height must be specified or flot.js raises an error.
  width: 60%; // height must be specified or flot.js raises an error.

  .graph {
    height: 100%;
  }
}

.sidebar {
  .h5 {
    padding: $nav-link-padding;
  }

  &.maximized {
    .admin-sidebar ul > li a {
      padding-left: 52px;
    }
  }
}

.panel-tab-wrapper {
  margin-top: 5em;
  padding-bottom: 1px;
}

.nav-escape-link {
  margin-top: -30px;
}

.group-user-listing .table td {
  vertical-align: middle;
}

.group-listing .table {
  margin-bottom: 0;
  margin-top: 1em;
  padding: 0 15px;

  td {
    vertical-align: middle;
  }

  ul {
    padding-left: 1em;
  }

  .panel-heading {
    line-height: 2.4em;
  }

  td:nth-child(2),
  th:nth-child(2) {
    text-align: left;
    width: 13em;
  }

  td:nth-child(3),
  th:nth-child(3) {
    text-align: right;
    width: 5em;
  }

  td:nth-child(4),
  th:nth-child(4) {
    text-align: right;
    width: 9em;
  }

  td:nth-child(5),
  th:nth-child(5) {
    text-align: center;
    width: 13em;
  }
}

.group-roles-table {
  td:nth-child(1),
  th:nth-child(1) {
    width: 25%;
  }

  td:nth-child(2),
  th:nth-child(2) {
    width: 55%;
  }

  td:nth-child(3),
  th:nth-child(3) {
    width: 20%;
  }
}

.group-workflow-roles-table {
  td:nth-child(1),
  th:nth-child(1) {
    width: 50%;
  }

  td:nth-child(2),
  th:nth-child(2) {
    width: 50%;
  }
}

.user-workflow-roles-table {
  td:nth-child(1),
  th:nth-child(1) {
    width: 25%;
  }

  td:nth-child(2),
  th:nth-child(2) {
    width: 25%;
  }

  td:nth-child(3),
  th:nth-child(3) {
    width: 50%;
  }
}

.full-width-container {
  padding-left: 0;
  padding-right: 0;
}

.list-scope {
  position: relative;

  .list-scope__query {
    padding-right: 1.8em;
  }

  .list-scope__query-wrapper .control-label {
    padding-right: 0.3em;
  }

  .list-scope__reset {
    bottom: 0.4em;
    position: absolute;
    right: 0.5em;
  }
}

.js-typeahead__empty-message {
  padding: 5px 15px;
}

.js-per-page label {
  font-weight: normal;
  padding-right: 0.3em;
}

.callout-danger {
  background-color: $well-bg;
  border-color: $brand-danger;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: $brand-danger;
  }
}

.logo-set {
  min-height: 320px;

  img {
    display: inline;
    vertical-align: middle;
  }
}

#s2id_collection_thumbnail_id {
  height: auto;
  padding: 0;
}

.hyc-bl-sort > .per_page.form-horizontal {
  border-bottom: 1px solid #ddd;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  padding-bottom: 1em;
}

.hyc-bl-sort > .per_page.form-horizontal::before,
.hyc-bl-sort > .per_page.form-horizontal::after {
  display: table;
  content: " ";
}

.hyc-bl-sort > .per_page.form-horizontal::after {
  clear: both;
}

.select2-container.generic_work_based_near {
  height: auto;
  padding: 0;
}

#users > .panel {
  .panel-body {
    padding-left: 0;
  }

  ul,
  h2,
  h3,
  h4,
  form,
  p {
    padding-left: 15px;
  }
  ul {
    padding-left: 40px;
  }
}

.defaultable-fonts div[class$="_font"] {
  margin-bottom: 0;

  label {
    display: block;
  }
}

.defaultable-fonts div.font-select {
  margin: 0 10px 10px 0;
}

a.restore-default-font,
a.restore-default-color {
  margin-bottom: 2em;
}

.defaultable-colors div[class$="_color"] {
  margin-bottom: 0.75em;
}

.representative-media {
  display: block;
  max-width: 100%;
  height: auto;
}

@media (min-width: $screen-lg-min) {
  a.restore-default-color {
    margin-top: 2em;
  }

  .defaultable-colors div[class$="_color"] {
    margin-bottom: 2em;
  }
}

#default_images .panel-footer form {
  display: inline-block;
}

@media (max-width: $screen-md-min) {
  .product-features {
    .grid-item {
      width: 50%;
    }
  }
}

@media (max-width: $screen-sm-min) {
  .product-features {
    .grid-item {
      width: 100%;
    }
  }
}

// make sure that URLs don't go outside the container on all work-show pages
.work-show ul.tabular li {
  word-wrap: break-word;
}

// removes the extra whitespace extending past the sides of the page
nav.navbar.navbar-default.navbar-static-top .container-fluid .row {
  margin-left: 0;
  margin-right: 0;

  nav.navbar-nav.col-sm-5 {
    padding-right: 0;
  }
}

body.public-facing {
  .btn {
    &.btn-primary,
    &.btn-danger {
      color: #fff;
    }

    &.btn-primary {
      background-color: #337ab7;
    }
  }
}

// FEATURED COLLECTIONS
@media (max-width: $screen-sm-min) {
  .admin-show-page
    .collection-title-row-wrapper
    .collection-title-row-content
    .btn.collapse {
    display: none;
  }
}

.dd-item.collapse {
  display: none;
}

.dd-item.dd3-item.featured-item {
  border-top: 0;
  min-height: unset;
  padding: 0;
}

.d-flex {
  display: flex;
}

.collection-highlights img,
.featured-item img {
  border: 0;
  height: 90px;
  width: unset;
}

.featured-collection-section {
  border: 1px solid #ccc;
}

.mb-30 {
  margin-bottom: 30px;
}

